# example

./: .gitignore  CMakeLists.txt  README.md
src/: hap_example.c  hap_example.h
